syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.file.proto";
option java_outer_classname = "GreeterProto";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Farewell {
  rpc SayGoodbye (ByeRequest) returns (ByeReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ByeRequest {
  string name = 1;
}

message ByeReply {
  string message = 1;
}